# science

./: README.md
science/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
science/install/joy_to_udp/lib/joy_to_udp/: joy_udp
science/install/joy_to_udp/share/joy_to_udp/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
science/joy_to_udp/: setup.cfg  setup.py
science/joy_to_udp/joy_to_udp/: joy_udp.py
science/log/: latest_build
serial_connection_cpp1/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
serial_connection_cpp1/install/joy_to_teensy/lib/joy_to_teensy/: joy_node
serial_connection_cpp1/install/joy_to_teensy/share/joy_to_teensy/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
serial_connection_cpp1/joy_to_teensy/: CMakeLists.txt
serial_connection_cpp1/joy_to_teensy/include/joy_to_teensy/: teensy_serial_backend.hpp
serial_connection_cpp1/joy_to_teensy/src/: joy_node.cpp  teensy_serial_backend.cpp
serial_connection_cpp1/log/: latest_build
serial_connection_cpp1/src/joy_to_teensy/: package.xml
serial_connection_cpp1/src/joy_to_teensy/include/joy_to_teensy/: teensy_serial_backend.hpp
serial_connection_cpp1/src/joy_to_teensy/src/: joy_node.cpp  teensy_serial_backend.cpp
